--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 		<link rel="icon" href="images/logo.jpg">
 	</head>
 	<body>
+		<span class="tooltip-holder"></span>
 		<section class="ticketing-form" id="ticketing-form">
-			<header><img src="images/logo.jpg" alt="Himalaya Airlines"></header>
+			<header>
+				<img src="images/logo.jpg" alt="Himalaya Airlines" class="float-left">
+				<p id="system-title" class="float-right">E-Ticketing System</p>
+				<div class="clearfix"></div>
+			</header>
 			<article class="search-form">
 				<form name="ticket-form" id="ticket-form" method="POST">
 					<table>
@@ -88,7 +93,7 @@
 					</table>
 					<footer>
 						<label for="help-text" class="help-text">Instruction: Press The Search Button To Search For Your Flight</label>
-						<input type="button" name="search-flight" id="search-flight" value="&#xf002;">
+						<input type="button" name="search-flight" id="search-flight" data-msg="Search" value="&#xf002;">
 					</footer>
 				</form>
 			</article>
@@ -292,14 +297,40 @@
 	<script type="text/javascript">
 	$(document).ready(function(){
 		
+		function showToolTip()
+		{
+			var showMsg= $(this).data("msg");
+			$(".tooltip-holder").fadeIn(1000);
+			$(".tooltip-holder").append("<span class='tooltip'>"+ showMsg +"</span>")
+		}
 
+		function hideToolTip()
+		{
+			$(".tooltip-holder").hide(1000);
+			$(".tooltip").remove();
+		}
+
+		//hide all the sections except the first form
 		$("#arrival-date-row").hide();
-
 		$("#ticketing-table").hide();
 		$("#ticketing-person-details").hide();
 		$("#print-ticket").hide();
+		$(".tooltip-holder").hide();
 
 
+		//add css using jquery 
+		$("#system-title").css({
+			'font-size': '30px',
+			'padding' : '40px',
+			'color' : '#8D0204'
+		});
+
+		$("#search-flight").bind({
+			mouseenter: showToolTip,
+			mouseleave: hideToolTip
+		});
+
+		//one way two way flight determination
 		$('input[type="radio"]').click(function(){
 		if($(this).attr("value")=="TWO"){
 			$("#ticket-class-row").hide('fast', function() {
@@ -317,13 +348,16 @@
 		}
 		});
 
+
+
+		// Go Back To The Home
 		$("#click-home").click(function() {
 			location.reload();
 		});
 
 
 
-
+		// transition from one section to another
 		$("#search-flight").click(function() {
 			$("#ticketing-form").hide('4000', function() {
 				$("#ticketing-table").show('4000');
@@ -343,8 +377,8 @@
 		});
 
 		$("#ticket-book").click(function() {
-			$("#ticketing-person-details").hide('4000', function() {
-				$("#print-ticket").show('4000');
+			$("#ticketing-person-details").fadeOut('4000', function() {
+				$("#print-ticket").fadeIn('4000');
 			});
 		});
 
