notification issue solved
repeating notification message when button clicked twice or thrice at the same time fixed.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					</table>
 					<footer>
 						<label for="help-text" class="help-text">Instruction: Press The Search Button To Search For Your Flight</label>
-						<input type="button" name="search-flight" id="search-flight" data-msg="Search" value="&#xf002;">
+						<input type="button" name="search-flight" id="search-flight" class="submit-button" data-msg="Search" value="&#xf002;">
 					</footer>
 				</form>
 			</article>
@@ -213,7 +213,7 @@
 					</table>
 					<footer>
 						<label for="help-text" class="help-text">Instruction: Press The Plane Button To Book Your Flight</label>
-						<input type="button" name="ticket-book" id="ticket-book" value="&#xf072;">
+						<input type="button" name="ticket-book" id="ticket-book" class="submit-button" value="&#xf072;">
 					</footer>
 				</form>
 			</article>
